--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -351,15 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n",
-      "<class 'float'>\n"
+      "2.0\n"
      ]
     }
    ],
@@ -367,8 +366,31 @@
     "a = 1#intero\n",
     "b = 1.0#float\n",
     "c = a + b\n",
-    "print(c)\n",
-    "print(type(c))#per convenzione, il nuovo tipo è float"
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per convenzione, operazioni tra interi e float restituiscono float."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(c))"
    ]
   },
   {
@@ -468,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +500,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-107743dacd8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Oggi è il'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#somma di stringhe e intero, che causa un errore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-107743dacd8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Oggi è il'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#somma di stringhe e intero, che causa un errore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
      ]
     }
@@ -498,20 +520,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oggi è il 28\n",
       "Oggi è il 28\n"
      ]
     }
    ],
    "source": [
-    "print(a + ' ' + str(b))\n",
+    "print(a + ' ' + str(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oggi è il 28\n"
+     ]
+    }
+   ],
+   "source": [
     "print(a, b)#conversione automatica"
    ]
   },
@@ -551,6 +588,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oggi è il 28 di maggio\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Oggi è il {} di maggio'.format(28))#{} è un segnaposto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oggi ci sono 25.7 gradi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Oggi ci sono {} gradi'.format(25.7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ho 30 anni e peso 60.5 chili\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Ho {} anni e peso {} chili'.format(30, 60.5))#comodo quando devo inserire diversi valori"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dieci diviso per tre fa 3.3333333333333335\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dieci diviso per tre fa', 10/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dieci diviso per tre fa 3.3333333333333335\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dieci diviso per tre fa {}'.format(10/3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dieci diviso per tre fa circa 3.333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Dieci diviso per tre fa circa {:.3f}'.format(10/3))#.3f è il formato desiderato"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -569,15 +708,13 @@
     }
    ],
    "source": [
-    "print('1. Oggi è il {} di maggio'.format(28))#{} è un segnaposto\n",
-    "print('2. Oggi ci sono {} gradi'.format(25.7))\n",
-    "print('3. Ho {} anni e peso {} chili'.format(30, 60.5))#comodo quando devo inserire diversi valori\n",
     "\n",
-    "print('4. Dieci diviso per tre fa', 10/3)\n",
-    "print('5. Dieci diviso per tre fa {}'.format(10/3))\n",
-    "print('6. Dieci diviso per tre fa circa {:.3f}'.format(10/3))#.3f è il formato desiderato\n",
     "\n",
-    "print('7. %d diviso per %d fa circa %.3f' % (10, 3, 10/3))#comodo, ma vanno specificati tutti i tipi"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('%d diviso per %d fa circa %.3f' % (10, 3, 10/3))#comodo, ma vanno specificati tutti i tipi"
    ]
   },
   {
