--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -4,8 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Info\n",
+    "Contenuti\n",
     "===\n",
+    "- [Info](#Info)\n",
+    "- [Hello, world!](#Hello,-world!)\n",
+    "- [Commenti](#Commenti)\n",
+    "- [Variabili](#Variabili)\n",
+    "- [Qualche tipo: stringhe e numeri](#Qualche-tipo:-stringhe-e-numeri)\n",
+    "    - [Stringhe](#Stringhe)\n",
+    "    - [Numeri: interi e float](#Numeri:-interi-e-float)\n",
+    "    - [Stampare stringhe e numeri](#Stampare-stringhe-e-numeri)\n",
+    "- [*Esercizio*](#Esercizio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Info\n",
+    "---\n",
     "Questo tutorial è ispirato a http://introtopython.org.\n",
     "\n",
     "Su https://docs.python.org/3 trovate la documentazione ufficiale del linguaggio Python."
@@ -16,7 +33,7 @@
    "metadata": {},
    "source": [
     "Hello, world!\n",
-    "===\n",
+    "--\n",
     "La prima cosa che si fa con un nuovo linguaggio è stampare *Hello, world!*."
    ]
   },
@@ -42,7 +59,7 @@
    "metadata": {},
    "source": [
     "Commenti\n",
-    "===\n",
+    "---\n",
     "I *commenti* sono fondamentali nella programmazione: aiutano a scrivere, organizzare e leggere il codice."
    ]
   },
@@ -69,7 +86,7 @@
    "metadata": {},
    "source": [
     "Variabili\n",
-    "===\n",
+    "---\n",
     "Una *variabile* contiene un valore, che può essere cambiato in qualsiasi momento."
    ]
   },
@@ -114,7 +131,7 @@
    "metadata": {},
    "source": [
     "Qualche tipo: stringhe e numeri\n",
-    "===\n",
+    "---\n",
     "Python intuisce da solo di che *tipo* è una variabile, in base a come questa viene dichiarata. Ci sono diversi tipi *built-in* e il programmatore può definirne di nuovi."
    ]
   },
@@ -351,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +489,7 @@
        "0.3"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +517,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-107743dacd8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Oggi è il'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#somma di stringhe e intero, che causa un errore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-22-107743dacd8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Oggi è il'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m28\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#somma di stringhe e intero, che causa un errore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: must be str, not int"
      ]
     }
@@ -520,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -690,30 +707,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Oggi è il 28 di maggio\n",
-      "2. Oggi ci sono 25.7 gradi\n",
-      "3. Ho 30 anni e peso 60.5 chili\n",
-      "4. Dieci diviso per tre fa 3.3333333333333335\n",
-      "5. Dieci diviso per tre fa 3.3333333333333335\n",
-      "6. Dieci diviso per tre fa circa 3.333\n",
-      "7. 10 diviso per 3 fa circa 3.333\n"
+      "10 diviso per 3 fa circa 3.333\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "print('%d diviso per %d fa circa %.3f' % (10, 3, 10/3))#comodo, ma vanno specificati tutti i tipi"
    ]
   },
@@ -721,19 +726,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***Esercizio***:\n",
+    "***Esercizio***\n",
+    "---\n",
     "- dichiarare due variabili numeriche\n",
     "- eseguire un'operazione qualsiasi che le coinvolga\n",
     "- salvare il risultato in un terza variabile\n",
-    "- stampare il risultato nella forma *Il risultato è ... ed è di tipo ...*\n",
-    "- commentare ogni riga del codice"
+    "- stampare il risultato nella forma *Il risultato è ... ed è di tipo ...*. Se il risultato è un float, stampare solo le prime 3 cifre decimali\n",
+    "- commentare le righe del codice con il significato delle azioni corrispondenti"
    ]
   }
  ],
