--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -4,14 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Liste\n",
-    "\n",
+    "*Contenuti*\n",
+    "===\n",
+    "- [Liste](#Liste)\n",
+    "    - [Lunghezza e accesso indicizzato](#Lunghezza-e-accesso-indicizzato)\n",
+    "    - [Lista vuota, aggiunta, inserimento, modifica, cancellazione](#Lista-vuota,-aggiunta,-inserimento,-modifica,-cancellazione)\n",
+    "    - [Estrazione e svuotamento](#Estrazione-e-svuotamento)\n",
+    "    - [Ricerca](#Ricerca)\n",
+    "    - [Ordinamento](#Ordinamento)\n",
+    "    - [Liste di tipo misto](#Liste-di-tipo-misto)\n",
+    "    - [*Slicing* e copia](#Slicing-e-copia)\n",
+    "- [Cicli *for*](#Cicli-for)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liste\n",
+    "===\n",
     "Una *lista* è una collezione ordinata di oggetti contenuta in una variabile."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +50,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lunghezza di una lista e accesso indicizzato\n",
-    "\n",
+    "Lunghezza e accesso indicizzato\n",
+    "---\n",
     "La *dimensione* di una lista si ottiene col metodo *len*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,19 +130,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lista vuota e operazioni su liste"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Lista vuota, aggiunta, inserimento, modifica, cancellazione\n",
+    "---\n",
     "Si può creare una lista vuota e aggiungervi elementi successivamente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gli elementi di una lista possono essere modificati in ogni momento."
+    "Gli elementi possono essere modificati in ogni momento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,19 +272,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il metodo *pop* estrae l'ultimo elemento di una lista."
+    "Per cancellare un elemento della lista si usa il metodo *remove*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['rectangle', 'square', 'hexagon']\n",
+      "['rectangle', 'square', 'circle']\n"
+     ]
+    }
+   ],
+   "source": [
+    "shapes.remove('hexagon')\n",
+    "print(shapes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estrazione e svuotamento\n",
+    "---\n",
+    "Il metodo *pop* estrae l'ultimo elemento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rectangle', 'square']\n",
       "circle\n"
      ]
     }
@@ -287,12 +326,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una lista si può svuotare con il metodo *clear*."
+    "La lista si può svuotare con il metodo *clear*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -312,12 +351,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se si cerca un oggetto preciso, si può controllare che sia contenuto in una lista e in quale posizione."
+    "Ricerca\n",
+    "---\n",
+    "Se si cerca un oggetto preciso nella lista, si può controllare che vi sia contenuto e in quale posizione."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +386,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-81ce8cf24cf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rectangle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-81ce8cf24cf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rectangle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: 'rectangle' is not in list"
      ]
     }
@@ -356,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -392,12 +433,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una lista può essere ordinata attraverso il metodo *sort* (del tipo lista) o *sorted* (built-in). Anche in questo caso, è Python che interpreta l'operazione in modo dinamico in base al tipo di variabili contenute nella lista."
+    "Ordinamento\n",
+    "---\n",
+    "Una lista può essere ordinata attraverso il metodo *sort* (del tipo lista) o *sorted* (built-in). Anche in questo caso, è Python che interpreta l'operazione in modo dinamico in base al tipo di variabili contenute nella lista. Nel caso delle stringhe, l'ordinamento sarà alfabetico."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +472,7 @@
    ],
    "source": [
     "shapes = ['triangle', 'square', 'circle', 'hexagon']\n",
-    "sorted_shapes = sorted(shapes)#crea un'altra lista\n",
+    "sorted_shapes = sorted(shapes)#sorted crea un'altra lista\n",
     "print(sorted_shapes)"
    ]
   },
@@ -442,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -496,6 +539,288 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lo stesso vale per i numeri. Per convenzione, l'ordinamento è crescente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [3,6,1,7,8,5]\n",
+    "print(sorted(numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sia sorted che sort permettono l'ordinamento inverso."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 7, 6, 5, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [3,6,1,7,8,5]\n",
+    "numbers.sort(reverse=True)\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 7, 6, 5, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [3,6,1,7,8,5]\n",
+    "print(sorted(numbers, reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In entrambi i casi, l'argomento *reverse* è *False* per default. Se non si specifica, l'ordinamento sarà quello naturale (dalla A alla Z, crescente,...)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liste di tipo misto\n",
+    "---\n",
+    "In Python, una lista può contenere qualsiasi cosa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apples', 'oranges', 32, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stuff = []\n",
+    "stuff += ['apples']\n",
+    "stuff += ['oranges']\n",
+    "stuff += [32]\n",
+    "stuff += [17]\n",
+    "print(stuff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anche un'altra lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apples', 'oranges', 32, 17, [1, 2, 3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "another_list = [1,2,3,4]\n",
+    "stuff += [another_list]\n",
+    "print(stuff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Slicing* e copia\n",
+    "---\n",
+    "Python permette l'estrazione di sottoliste (slicing) in modo molto compatto. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']\n",
+    "print(letters[:3])#'le prime 3'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'e', 'f', 'g', 'h']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[3:])#'dalla terza (esclusa) in poi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letters[:3] + letters[3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'e', 'f']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[3:6])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'operazione di slicing può essere usata per copiare una lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_list = [1,2,3,'a']\n",
+    "copied_list = original_list[:]\n",
+    "print(copied_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "copied_list[-1] = 4\n",
+    "print(copied_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Come prima, la lista originale rimane inalterata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(original_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Cicli ***for***\n",
     "===\n",
     "Si può accedere agli elementi di una lista attraverso un ciclo **for**.\n",
@@ -505,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
