finita seconda lezione

--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Contenuti\n",
+    "*Contenuti*\n",
     "===\n",
     "- [Info](#Info)\n",
     "- [Hello, world!](#Hello,-world!)\n",
@@ -731,8 +731,18 @@
     "- dichiarare due variabili numeriche\n",
     "- eseguire un'operazione qualsiasi che le coinvolga\n",
     "- salvare il risultato in un terza variabile\n",
-    "- stampare il risultato nella forma *Il risultato è ... ed è di tipo ...*. Se il risultato è un float, stampare solo le prime 3 cifre decimali\n",
+    "- stampare il risultato nella forma *Il risultato è ... ed è di tipo ...*\n",
+    "- se il risultato è un float, stampare solo le prime 3 cifre decimali\n",
     "- commentare le righe del codice con il significato delle azioni corrispondenti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FILL ME"
    ]
   }
  ],
