aggiunto notebook funzioni e dizionari

--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -1403,7 +1403,7 @@
    "source": [
     "*Esercizio 4*\n",
     "---\n",
-    "Ripetere l'esercizio 3, utilizzando le comprensioni di liste."
+    "Ripetere l'esercizio 3 (ignorando la stampa e dividendo per due i nuovi elementi ottenuti elevando al quadrato), utilizzando le comprensioni di liste."
    ]
   },
   {
