--- a/4. Funzioni e dizionari.ipynb
+++ b/4. Funzioni e dizionari.ipynb
@@ -20,6 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Funzioni'></a>\n",
     "Funzioni\n",
     "===\n",
     "Spesso, quando si scrive codice, una certa sequenza di azioni viene utilizzata molte volte, magari con piccole differenze di contesto.\n",
@@ -87,6 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Sintassi'></a>\n",
     "Sintassi\n",
     "---\n",
     "Una *funzione* è una sequenza di azioni a cui si dà un nome, e che si può *chiamare* all'occorrenza. Abbiamo già visto ed usato alcune funzioni: tra le altre, print, len, title e sorted."
