prova render nbviewer

--- a/4. Funzioni e dizionari.ipynb
+++ b/4. Funzioni e dizionari.ipynb
@@ -366,6 +366,25 @@
     "\n",
     "Ripetere l'esercizio 3, ma utilizzando una funzione esterna per controllare se un utente è maggiorenne."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script>\n",
+    "  $(document).ready(function(){\n",
+    "    $('div.prompt').hide();\n",
+    "    $('div.back-to-top').hide();\n",
+    "    $('nav#menubar').hide();\n",
+    "    $('.breadcrumb').hide();\n",
+    "    $('.hidden-print').hide();\n",
+    "  });\n",
+    "</script>\n",
+    "\n",
+    "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
+    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "</footer>"
+   ]
   }
  ],
  "metadata": {
