prova render nbviewer 3

--- a/4. Funzioni e dizionari.ipynb
+++ b/4. Funzioni e dizionari.ipynb
@@ -373,7 +373,7 @@
    "source": [
     "<script>\n",
     "  $(document).ready(function(){\n",
-    "    $('div.prompt').hide();\n",
+    "    $('div.back-to-top').hide();\n",
     "    $('nav#menubar').hide();\n",
     "    $('.breadcrumb').hide();\n",
     "    $('.hidden-print').hide();\n",
@@ -383,6 +383,15 @@
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
     "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
     "</footer>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$('div.prompt').hide();"
    ]
   }
  ],
