prova render nbviewer 6

--- a/4. Funzioni e dizionari.ipynb
+++ b/4. Funzioni e dizionari.ipynb
@@ -382,7 +382,7 @@
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
     "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
-    "</footer>\n"
+    "</footer>"
    ]
   }
  ],
