aggiunto notebook dizionari

--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -361,6 +361,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La combinazione di due o più stringhe è una nuova stringa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ciao mamma, guarda come mi diverto\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'Ciao mamma, guarda come'\n",
+    "b = ' mi diverto'\n",
+    "c =  a + b\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Numeri: interi e float\n",
     "\n",
     "*Interi* e *float* (numeri decimali) sono altri due tipi built-in di Python. "
@@ -600,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attraverso i *segnaposti* le stampe complesse possono essere gestite in modo più compatto."
+    "Attraverso i *segnaposto* le stampe complesse possono essere gestite in modo più compatto."
    ]
   },
   {
@@ -738,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
