--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -12,7 +12,7 @@
     "    - [Estrazione e svuotamento](#Estrazione-e-svuotamento)\n",
     "    - [Ricerca](#Ricerca)\n",
     "    - [Ordinamento](#Ordinamento)\n",
-    "    - [Operatori aggregati](#Operatori aggregati)\n",
+    "    - [Operatori aggregati](#Operatori-aggregati)\n",
     "        - [*Esercizio 1*](#Esercizio-1)\n",
     "    - [Liste di tipo misto](#Liste-di-tipo-misto)\n",
     "    - [*Slicing* e copia](#Slicing-e-copia)\n",
@@ -58,7 +58,7 @@
    "source": [
     "Dimensione e accesso indicizzato\n",
     "---\n",
-    "La *dimensione* di una lista si ottiene col metodo *len* (da *length*, lunghezza in inglese)."
+    "La *dimensione* di una lista si ottiene con la *funzione* (o *metodo*) *len* (da *length*, lunghezza in inglese). Vedremo in dettaglio cosa è una funzione nelle lezioni successive."
    ]
   },
   {
