riorganizzata numerazione e aggiunte soluzioni

--- a/3. Dizionari.ipynb
+++ b/3. Dizionari.ipynb
@@ -487,34 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mount Everest è alta 8858\n",
-      "K2 è alta 8611\n",
-      "Kangchenjunga è alta 8586\n",
-      "La montagna numero 1 è K2 ed è alta 8611\n",
-      "La montagna numero 2 è Kangchenjunga ed è alta 8586\n",
-      "La montagna numero 3 è Mount Everest ed è alta 8858\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#FILL ME\n",
-    "heights = {}\n",
-    "heights['Mount Everest'] = 8858\n",
-    "heights['K2'] = 8611\n",
-    "heights['Kangchenjunga'] = 8586\n",
-    "\n",
-    "for mountain, height in heights.items():\n",
-    "    print('{} è alta {}'.format(mountain, height))\n",
-    "    \n",
-    "for i, mountain in enumerate(sorted(heights.keys())):\n",
-    "    print('La montagna numero {} è {} ed è alta {}'.format(i+1, mountain, heights[mountain]))"
+    "#FILL ME"
    ]
   },
   {
@@ -535,98 +512,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La montagna numero 0 è Mount Everest, è alta 8858, si trova in Nepal\n",
-      "La montagna numero 1 è K2, è alta 8611, si trova in Pakistan\n",
-      "La montagna numero 2 è Kangchenjunga, è alta 8586, si trova in Nepal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# @hidden\n",
-    "\n",
-    "mountains = []\n",
-    "\n",
-    "mountains += [{'name':'Mount Everest', 'height':8858, 'country':'Nepal'}]\n",
-    "mountains += [{'name':'K2', 'height':8611, 'country':'Pakistan'}]\n",
-    "mountains += [{'name':'Kangchenjunga', 'height':8586, 'country':'Nepal'}]\n",
-    "\n",
-    "for i, m in enumerate(mountains):\n",
-    "    print('La montagna numero {} è {}, è alta {}, si trova in {}'.format(i,\n",
-    "                                                                         m['name'],\n",
-    "                                                                         m['height'],\n",
-    "                                                                         m['country']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['Mount Everest', 'K2', 'Kangchenjunga'], [8858, 8611, 8586])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mountain_names = [m['name'] for m in mountains]\n",
-    "mountain_heights = [m['height'] for m in mountains]\n",
-    "names, heights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Mount Everest': 8858, 'K2': 8611, 'Kangchenjunga': 8586}\n"
-     ]
-    }
-   ],
-   "source": [
-    "heights = {}\n",
-    "\n",
-    "for i,n in enumerate(names):\n",
-    "    heights[n] = mountain_heights[i]\n",
-    "    \n",
-    "print(heights)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    " if (code_show){\n",
-    " $('div.input').hide();\n",
-    " } else {\n",
-    " $('div.input').show();\n",
-    " }\n",
-    " code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "\n",
-    "The raw code for this IPython notebook is by default hidden for easier reading.\n",
-    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')"
+    "#FILL ME"
    ]
   },
   {
